# Luna

./: .gitignore  LICENSE  README.md  app.py  index.js  package-lock.json  package.json  pyproject.toml
.wwebjs_auth/session/: DevToolsActivePort  Local State
.wwebjs_auth/session/CertificateRevocation/8038/: crl-set  manifest.fingerprint  manifest.json
.wwebjs_auth/session/Default/: Cookies  Favicons  History  Network Persistent State  Preferences  QuotaManager  QuotaManager-journal  Reporting and NEL  TransportSecurity  Visited Links
.wwebjs_auth/session/Default/Extension Scripts/: LOG
.wwebjs_auth/session/Default/Extension State/: LOG  LOG.old
.wwebjs_auth/session/Default/GPUCache/: data_1  index
.wwebjs_auth/session/Default/Platform Notifications/: LOG  LOG.old
.wwebjs_auth/session/Default/Session Storage/: LOG  LOG.old
.wwebjs_auth/session/Default/Sessions/: Session_13330557485471992  Session_13330557585576860  Tabs_13330557466002757  Tabs_13330557585683366
.wwebjs_auth/session/Default/Site Characteristics Database/: LOG  LOG.old
.wwebjs_auth/session/Default/shared_proto_db/: LOG  LOG.old
MVP/: Dockerfile  index.js  index.ts  package.json  setup.sh  tmp.js  tsconfig.json  users.db  users.ts
MVP/libs/: dynamoDBClient.ts  openaiClient.ts  snsClient.ts  whatsappClient.ts
Reminder/: config.js  index.js  package.json
Reminder/libs/: S3Client.mjs  openaiClient.mjs  whatsappClient.mjs
chats/: _chatCarlos.txt  _chatFernanda.txt  _chatJose.txt
luna/: luna_stack.py
tests/unit/: test_luna_stack.py
(+816 files in other folders)
